[package]
authors = ["leonardo.yvens <leoyvens@gmail.com>"]
name = "ridesharing-solver"
version = "0.1.0"

[dependencies]
gurobi = { git = "https://github.com/ubnt-intrepid/rust-gurobi.git" }
petgraph = { version = "0.4.12", features = ["serde-1"] }
serde = "1.0.36"
serde_derive = "1.0.36"
serde_json = "1.0.13"
rand = "0.5.0-pre.0"
structopt = "0.2.5"

[profile.release]
# Check for overflow in release builds.
debug-assertions = true
